--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "dotenv": "^16.3.1",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "react": "^18",
