--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
-    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.47",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
