--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.1.0",
     "@types/mongoose": "^5.11.97",
+    "@types/react-redux": "^7.1.33",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
