--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@types/mongoose": "^5.11.97",
     "@types/react-redux": "^7.1.33",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.0",
+    "formidable": "^3.5.1",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18",
