--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-cloudinary": "^5.20.0",
+    "node-cron": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0"
